# po_architecture

./: CMakeLists.txt  Dockerfile  README.md  components.md  context.md  docker-compose.yml  helper.h  performance.md  start.sh  start_other.sh  start_writer.sh
config/: config.cpp  config.h
database/: cache.cpp  cache.h  database.cpp  database.h  group.cpp  group.h  message.cpp  message.h  user.cpp  user.h
docs/: components.md  context.md  task.md
docs/postman/: postman_collection.json  postman_docks.md  postman_environment.json
docs/swagger/: chat_api.yaml  users_api.yaml
my_service/: Dockerfile
other_server/: Dockerfile  http_other_server.h
proxysql/: Dockerfile  proxysql.cnf
task1/: task.md
web_server/handlers/: user_handler.h
